...
                                <nil key="highlightedColor"/>
                            </label>
                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="GRE_Title.png" translatesAutoresizingMaskIntoConstraints="NO" id="4Es-DJ-Rb9">
                                <rect key="frame" x="3" y="96" width="369" height="150"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
...
                                <rect key="frame" x="5" y="46" width="38" height="37"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <accessibility key="accessibilityConfiguration" label="SettingsButton"/>
                                <connections>
                                    <action selector="Setting:" destination="BYZ-38-t0r" eventType="touchUpInside" id="AOe-mm-oH9"/>
...
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <color key="backgroundColor" red="0.25663480162620544" green="0.44731360673904419" blue="0.76692324876785278" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <accessibility key="accessibilityConfiguration" label="UpdateButton"/>
                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                <state key="normal" title="Update">
...
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Username" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Ij3-UU-aWZ">
                                <rect key="frame" x="89" y="114" width="197" height="30"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
...
                                <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no"/>
                            </textField>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="n5I-12-k6K">
                                <rect key="frame" x="89" y="187" width="197" height="30"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
...
                                <rect key="frame" x="168" y="270" width="38" height="30"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <accessibility key="accessibilityConfiguration" label="LoginButton"/>
                                <state key="normal" title="Login"/>
                                <connections>
...
                                <rect key="frame" x="159" y="318" width="57" height="30"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <accessibility key="accessibilityConfiguration" label="RegisterButton"/>
                                <state key="normal" title="Register"/>
                                <connections>
...
